--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vanilla-extract/dynamic": "^2.1.5",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
