--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
     "name": "react-simple-calendar",
     "private": false,
-    "version": "0.0.0",
+    "version": "1.0.0",
     "type": "module",
-    "main": "dist/index.cjs.js",
+    "main": "dist/index.js",
     "module": "dist/index.esm.js",
     "types": "dist/index.d.ts",
     "peerDependencies": {
-        "react": "^18.0.0",
-        "react-dom": "^18.0.0"
+        "react": "^19.1.0",
+        "react-dom": "^19.1.0"
     },
     "scripts": {
         "dev": "vite",
@@ -19,16 +19,19 @@
     },
     "dependencies": {
         "@vanilla-extract/dynamic": "^2.1.5",
-        "date-fns": "^4.1.0",
-        "react": "^19.1.0",
-        "react-dom": "^19.1.0"
+        "date-fns": "^4.1.0"
     },
     "devDependencies": {
         "@eslint/js": "^9.30.1",
+        "@rollup/plugin-commonjs": "^28.0.6",
+        "@rollup/plugin-node-resolve": "^16.0.1",
+        "@rollup/plugin-terser": "^0.4.4",
+        "@rollup/plugin-typescript": "^12.1.4",
         "@types/react": "^19.1.8",
         "@types/react-dom": "^19.1.6",
         "@vanilla-extract/css": "^1.17.4",
         "@vanilla-extract/recipes": "^0.5.7",
+        "@vanilla-extract/rollup-plugin": "^1.4.1",
         "@vanilla-extract/vite-plugin": "^5.1.1",
         "@vitejs/plugin-react": "^4.6.0",
         "eslint": "^9.30.1",
