Fix : index.ts 에 export default 로 내보내기로 수정 작업

--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
-    "name": "react-simple-calendar",
+    "name": "react-simple-calendar-light",
     "private": false,
+    "author": "Duuu",
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/uudeok/react-simple-calendar"
+    },
     "version": "1.0.0",
-    "type": "module",
     "main": "dist/index.js",
     "module": "dist/index.esm.js",
     "types": "dist/index.d.ts",
@@ -12,7 +16,7 @@
     },
     "scripts": {
         "dev": "vite",
-        "build": "rollup -c",
+        "build": "vite build",
         "prepare": "npm run build",
         "lint": "eslint .",
         "preview": "vite preview"
@@ -23,15 +27,10 @@
     },
     "devDependencies": {
         "@eslint/js": "^9.30.1",
-        "@rollup/plugin-commonjs": "^28.0.6",
-        "@rollup/plugin-node-resolve": "^16.0.1",
-        "@rollup/plugin-terser": "^0.4.4",
-        "@rollup/plugin-typescript": "^12.1.4",
         "@types/react": "^19.1.8",
         "@types/react-dom": "^19.1.6",
         "@vanilla-extract/css": "^1.17.4",
         "@vanilla-extract/recipes": "^0.5.7",
-        "@vanilla-extract/rollup-plugin": "^1.4.1",
         "@vanilla-extract/vite-plugin": "^5.1.1",
         "@vitejs/plugin-react": "^4.6.0",
         "eslint": "^9.30.1",
