--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -13,5 +13,5 @@
         "outDir": "dist", // JS 파일 위치
         "emitDeclarationOnly": true // JS는 Vite가 처리, TS는 타입만 생성
     },
-    "include": ["src"]
+    "include": ["src/index.ts"]
 }
