--- a/package.json
+++ b/package.json
@@ -14,6 +14,11 @@
         "react": "^19.1.0",
         "react-dom": "^19.1.0"
     },
+    "exports": {
+        ".": {
+            "types": "./dist/index.d.ts"
+        }
+    },
     "scripts": {
         "dev": "vite",
         "build": "vite build",
