--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     },
     "exports": {
         ".": {
-            "types": "./dist/index.d.ts"
+            "import": "./dist/index.esm.js",
+            "require": "./dist/index.js",
+            "types": "./dist/index.d.ts",
+            "default": "./dist/index.js"
         }
     },
     "scripts": {
