--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     },
     "devDependencies": {
         "@eslint/js": "^9.30.1",
+        "@types/node": "^24.4.0",
         "@types/react": "^19.1.8",
         "@types/react-dom": "^19.1.6",
         "@vanilla-extract/css": "^1.17.4",
@@ -37,8 +38,10 @@
         "eslint-plugin-react-hooks": "^5.2.0",
         "eslint-plugin-react-refresh": "^0.4.20",
         "globals": "^16.3.0",
+        "path": "^0.12.7",
         "typescript": "~5.8.3",
         "typescript-eslint": "^8.35.1",
-        "vite": "^7.0.4"
+        "vite": "^7.0.4",
+        "vite-plugin-dts": "^4.5.4"
     }
 }
