--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -1,15 +1,29 @@
 {
     "compilerOptions": {
-        "target": "ESNext",
+        "target": "ES5",
         "module": "ESNext",
-        "jsx": "react-jsx",
-        "strict": true,
-        "esModuleInterop": true,
-        "moduleResolution": "Node",
+        "noImplicitAny": true,
+        "strictNullChecks": true,
+        "useDefineForClassFields": true,
+        "lib": ["DOM", "DOM.Iterable", "ESNext"],
         "skipLibCheck": true,
-
+        "outDir": "./dist",
         "declaration": true,
-        "outDir": "dist"
+
+        /* Bundler mode */
+        "moduleResolution": "node",
+        "resolveJsonModule": true,
+        "isolatedModules": true,
+        "noEmit": false,
+        "jsx": "react-jsx",
+        "esModuleInterop": true,
+        "allowSyntheticDefaultImports": true,
+
+        /* Linting */
+        "strict": true,
+        "noUnusedLocals": true,
+        "noUnusedParameters": true,
+        "noFallthroughCasesInSwitch": true
     },
-    "include": ["src/**/*"]
+    "include": ["src"]
 }
