--- a/package.json
+++ b/package.json
@@ -14,9 +14,16 @@
         "date"
     ],
     "version": "1.0.5",
-    "main": "dist/index.js",
-    "module": "dist/index.esm.js",
-    "types": "dist/index.d.ts",
+    "main": "./dist/index.cjs.js",
+    "module": "./dist/index.es.js",
+    "types": "./dist/index.d.ts",
+    "exports": {
+        ".": {
+            "import": "./dist/index.es.js",
+            "require": "./dist/index.cjs.js",
+            "types": "./dist/index.d.ts"
+        }
+    },
     "peerDependencies": {
         "react": "^19.1.0",
         "react-dom": "^19.1.0"
