--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -22,5 +22,5 @@
         "noUnusedParameters": true,
         "noFallthroughCasesInSwitch": true
     },
-    "include": ["./src/**/*.ts", "./src/**/*.tsx", "./src/index.ts"]
+    "include": ["./src/**/*.ts", "./src/**/*.tsx", "src/index.tsx"]
 }
