--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
     "exports": {
         ".": {
             "import": "./dist/index.es.js",
-            "require": "./dist/index.cjs.js",
-            "types": "./dist/index.d.ts"
+            "require": "./dist/index.cjs.js"
         }
     },
     "peerDependencies": {
