Remove: tsconfig.app.json 삭제 및 index 내보내기 수정

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,34 @@
 {
-  "files": [],
-  "references": [
-    { "path": "./tsconfig.app.json" },
-    { "path": "./tsconfig.node.json" }
-  ]
+    "compilerOptions": {
+        "target": "es5",
+        "useDefineForClassFields": true,
+        "lib": ["dom", "dom.iterable", "esnext"],
+        "types": ["vite/client"],
+        "module": "ESNext",
+        "skipLibCheck": true,
+        "baseUrl": ".",
+
+        /* Bundler mode */
+        "moduleResolution": "node",
+        "allowImportingTsExtensions": true,
+        "resolveJsonModule": true,
+        "isolatedModules": true,
+        "jsx": "react-jsx",
+
+        /* Linting */
+        "strict": true,
+        "noUnusedLocals": false,
+        "noUnusedParameters": true,
+        "noFallthroughCasesInSwitch": true,
+
+        "rootDir": "src",
+        "typeRoots": ["node_modules/@types", "@types", "node_modules"],
+        "noEmit": true, // 자동js 생성막기
+        "noEmitOnError": true, // ts파일 에러 시 js파일 생성X
+
+        "allowSyntheticDefaultImports": true // import cryptoJS
+    },
+    "include": ["src/**/*.ts", "src/**/*.tsx"],
+    "exclude": ["node_modules"],
+    "declaration": true
 }
