--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     },
     "version": "1.0.7",
     "type": "module",
-    "main": "dist/index.umd.cjs",
     "module": "dist/index.js",
+    "main": "dist/index.es.js",
     "types": "dist/index.d.ts",
     "peerDependencies": {
         "react": "^19.1.0",
@@ -33,7 +33,7 @@
     ],
     "scripts": {
         "dev": "vite",
-        "build": "vite build",
+        "build": "rm -rf dist && tsc -p ./tsconfig.node.json && vite build",
         "prepare": "npm run build",
         "lint": "eslint .",
         "preview": "vite preview",
