--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     "module": "dist/index.js",
     "main": "dist/index.es.js",
     "peerDependencies": {
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0"
+        "react": ">=18 <20",
+        "react-dom": ">=18 <20"
     },
     "files": [
         "dist",
