--- a/package.json
+++ b/package.json
@@ -16,22 +16,20 @@
     "exports": {
         ".": {
             "import": "./dist/index.js",
-            "require": "./dist/index.umd.cjs",
-            "types": "./dist/index.d.ts"
+            "require": "./dist/index.umd.cjs"
         }
     },
     "version": "1.0.10",
     "type": "module",
-    "main": "dist/index.umd.cjs",
-    "module": "dist/index.js",
+    "main": "./dist/index.umd.cjs",
+    "module": "./dist/index.js",
+    "types": "./dist/index.d.ts",
     "peerDependencies": {
         "react": ">=18 <20",
         "react-dom": ">=18 <20"
     },
     "files": [
-        "dist",
-        "src",
-        "tsconfig.json"
+        "dist"
     ],
     "scripts": {
         "dev": "vite",
