--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
     "name": "react-simple-calendar-light",
+    "version": "1.0.10",
     "private": false,
     "author": "Duuu",
     "repository": {
@@ -15,28 +16,26 @@
     ],
     "exports": {
         ".": {
-            "import": "./dist/index.js",
-            "require": "./dist/index.umd.cjs"
+            "import": "./dist/index.es.js",
+            "require": "./dist/index.umd.js",
+            "types": "./dist/index.d.ts"
         }
     },
-    "version": "1.0.10",
     "type": "module",
-    "main": "./dist/index.umd.cjs",
-    "module": "./dist/index.js",
-    "types": "./dist/index.d.ts",
+    "main": "dist/index.umd.cjs",
+    "module": "dist/index.js",
+    "types": "dist/index.d.ts",
     "peerDependencies": {
         "react": ">=18 <20",
         "react-dom": ">=18 <20"
     },
-    "files": [
-        "dist"
-    ],
     "scripts": {
         "dev": "vite",
         "build": "rm -rf dist && vite build",
         "prepare": "npm run build",
         "lint": "eslint .",
-        "preview": "vite preview"
+        "preview": "vite preview",
+        "publish:npm": "npm run build && npm publish"
     },
     "dependencies": {
         "@vanilla-extract/dynamic": "^2.1.5",
