--- a/package.json
+++ b/package.json
@@ -14,17 +14,16 @@
         "month",
         "date"
     ],
-    "exports": {
-        ".": {
-            "import": "./dist/index.es.js",
-            "require": "./dist/index.umd.js",
-            "types": "./dist/index.d.ts"
-        }
-    },
     "type": "module",
     "main": "dist/index.umd.cjs",
     "module": "dist/index.js",
     "types": "dist/index.d.ts",
+    "exports": {
+        ".": {
+            "import": "./dist/index.js",
+            "require": "./dist/index.umd.cjs"
+        }
+    },
     "peerDependencies": {
         "react": ">=18 <20",
         "react-dom": ">=18 <20"
