--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,25 +2,17 @@
     "compilerOptions": {
         "target": "ESNext",
         "module": "ESNext",
-        "noImplicitAny": true,
-        "strictNullChecks": true,
-        "useDefineForClassFields": true,
-        "lib": ["DOM", "DOM.Iterable", "ESNext"],
-        "skipLibCheck": true,
-
-        "noEmit": true, // ✅ 이 부분을 true로 변경
+        "declaration": true,
+        "declarationDir": "dist",
+        "emitDeclarationOnly": false,
         "jsx": "react-jsx",
         "esModuleInterop": true,
-        "allowSyntheticDefaultImports": true,
-
-        "moduleResolution": "node",
-        "resolveJsonModule": true,
-        "isolatedModules": true,
-
+        "moduleResolution": "Node",
+        "skipLibCheck": true,
         "strict": true,
-        "noUnusedLocals": true,
-        "noUnusedParameters": true,
-        "noFallthroughCasesInSwitch": true
+        "outDir": "dist",
+        "baseUrl": "src"
     },
-    "include": ["./src/**/*.ts"]
+    "include": ["src"],
+    "exclude": ["node_modules", "dist"]
 }
