--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
         ".": {
             "import": "./dist/index.js",
             "require": "./dist/index.umd.cjs"
-        }
+        },
+        "./react-simple-calendar-light.css": "./dist/react-simple-calendar-light.css"
     },
     "peerDependencies": {
         "react": ">=18 <20",
