--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
             "import": "./dist/index.js",
             "require": "./dist/index.umd.cjs"
         },
-        "./react-simple-calendar-light.css": "./dist/react-simple-calendar-light.css"
+        "./css": "./dist/react-simple-calendar-light.css"
     },
     "peerDependencies": {
         "react": ">=18 <20",
