--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "react-simple-calendar-light",
-    "version": "1.0.16",
+    "version": "1.0.14",
     "private": false,
     "author": "Duuu",
     "repository": {
@@ -35,11 +35,7 @@
         "prepare": "npm run build",
         "lint": "eslint .",
         "preview": "vite preview",
-        "publish:npm": "npm run build && npm publish"
-    },
-    "dependencies": {
-        "@vanilla-extract/dynamic": "^2.1.5",
-        "date-fns": "^4.1.0"
+        "publish:npm": "npm run build && npm publish --access public"
     },
     "devDependencies": {
         "@eslint/js": "^9.30.1",
@@ -47,6 +43,7 @@
         "@types/react": "^19.1.8",
         "@types/react-dom": "^19.1.6",
         "@vanilla-extract/css": "^1.17.4",
+        "@vanilla-extract/dynamic": "^2.1.5",
         "@vanilla-extract/recipes": "^0.5.7",
         "@vanilla-extract/vite-plugin": "^5.1.1",
         "@vitejs/plugin-react": "^4.6.0",
