--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,8 +10,8 @@
         "moduleResolution": "Node",
         "skipLibCheck": true,
         "strict": true,
-        "outDir": "dist",
-        "baseUrl": "src"
+        "outDir": "dist"
+        // "baseUrl": "src"
     },
     "include": ["src"],
     "exclude": ["node_modules", "dist"]
