Feat: vitest 및 react-test-library 설치 단위 테스트 기본 설정

--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
         "prepare": "npm run build",
         "lint": "eslint .",
         "preview": "vite preview",
-        "publish:npm": "npm run build && npm publish --access public"
+        "publish:npm": "npm run build && npm publish --access public",
+        "test": "vitest"
     },
     "devDependencies": {
         "@eslint/js": "^9.30.1",
