--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,5 +14,6 @@
         // "baseUrl": "src"
     },
     "include": ["src"],
-    "exclude": ["node_modules", "dist"]
+    "exclude": ["node_modules", "dist"],
+    "types": ["vitest/globals", "@testing-library/jest-dom"]
 }
