--- a/package.json
+++ b/package.json
@@ -35,8 +35,8 @@
         "prepare": "npm run build",
         "lint": "eslint .",
         "preview": "vite preview",
-        "publish:npm": "npm run build && npm publish --access public",
-        "test": "vitest"
+        "test": "vitest",
+        "publish:npm": "npm run test && npm run build && npm publish --access public"
     },
     "devDependencies": {
         "@eslint/js": "^9.30.1",
